# elo-in-rust

./: Cargo.toml  README.md
src/: lib.rs
src/tests/: test_module.rs
